
  API BREAKS:

    * Attempting to pull data from a ghost aware repository (e.g. knits) into a
      non-ghost aware repository such as weaves will now fail if there are
      ghosts.  (Robert Collins)

    * Log formatters must now provide log_revision instead of show and
      show_merge_revno methods. The latter had been deprecated since the 0.17
      release. (James Westby)

    * ``VersionedFile.get_parents`` is deprecated, please use
      ``VersionedFile.get_parent_map``. (Robert Collins)

  TESTING:

  INTERNALS:

    * ``VersionedFile`` now has a new method ``get_parent_map`` which, like
      ``Graph.get_parent_map`` returns a dict of key:parents. (Robert Collins)


bzr 1.3rc1 2008-03-16
---------------------

Bazaar has become part of the GNU project <http://www.gnu.org>

Many operations that act on history, including ``log`` and ``annotate`` are now
substantially faster.  Several bugs have been fixed and several new options and
features have been added.

  NOTES WHEN UPGRADING:

    * The backup directory created by ``upgrade`` is now called
      ``backup.bzr``, not ``.bzr.backup``. (Martin Albisetti)

  CHANGES:

    * A new repository format 'development' has been added. This format will
      represent the latest 'in-progress' format that the bzr developers are
      interested in getting early-adopter testing and feedback on.
      ``doc/developers/development-repo.txt`` has detailed information.
      (Robert Collins)

    * BZR_LOG environment variable controls location of .bzr.log trace file. 
      User can suppress writing messages to .bzr.log by using '/dev/null'
      filename (on Linux) or 'NUL' (on Windows). If BZR_LOG variable 
      is not defined but BZR_HOME is defined then default location
      for .bzr.log trace file is ``$BZR_HOME/.bzr.log``.
      (Alexander Belchenko)

    * ``launchpad`` builtin plugin now shipped as separate part in standalone
      bzr.exe, installed to ``C:\Program Files\Bazaar\plugins`` directory, 