@@ -63,6 +63,9 @@ IN DEVELOPMENT
       show_merge_revno methods. The latter had been deprecated since the 0.17
       release. (James Westby)
 
+    * ``VersionedFile.get_graph`` is deprecated, with no replacement method.
+      The method was size(history) and not desirable. (Robert Collins)
+
     * ``VersionedFile.get_parents`` is deprecated, please use
       ``VersionedFile.get_parent_map``. (Robert Collins)
 
